# AstroColour

./: .pre-commit-config.yaml  README.md  pyproject.toml
src/astrocolour/: __init__.py  main.py  utils.py
